--- a/src/index.css
+++ b/src/index.css
@@ -12,27 +12,23 @@
 }
 
 body {
-  background-color: #FFFFFF;
+  background: #ffffff;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 /* ######### RESPONSIVE ######### */
 /* ### MOBILE ### */
 @media (max-width: 576px) {
-
 }
 
 /* ### TABLET ### */
 @media (min-width: 577px) and (max-width: 768px) {
-
 }
 
 /* ### DESKTOP ### */
 @media (min-width: 769px) and (max-width: 1024px) {
-
 }
 
 /* ### BIG DESKTOP ### */
 @media (min-width: 1025px) {
-
 }
